added open in colab

--- a/notebooks/optimality_gap_LLM.ipynb
+++ b/notebooks/optimality_gap_LLM.ipynb
@@ -6,7 +6,7 @@
         "id": "BQBk8pj-xaPy"
       },
       "source": [
-        "# Optimality Gap of LLM-based Agents in Gridworld Problem\n",
+        "# Optimality Gap of LLM-based Agents in Gridworld Problem  [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/XO-Appleton/RL-LLM-Optimality-Research/blob/main/notebooks/optimality_gap_LLM.ipynb)\n",
         "\n",
         "- Author: Yumo Bai\n",
         "- Date: Nov 3, 2023\n",
