Final edit for grammar & misspellings

--- a/notebooks/optimality_gap_LLM.ipynb
+++ b/notebooks/optimality_gap_LLM.ipynb
@@ -120,31 +120,6 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4JFfMxY_FOOP",
-        "outputId": "b21980f3-8611-4865-8e34-107db8cd9723"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
-            "  and should_run_async(code)\n"
-          ]
-        }
-      ],
-      "source": [
-        "SIMP_ENV_NAME = 'Taxi-v3'\n",
-        "RENDER_MODE = 'rgb_array'"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 319
         },
@@ -172,7 +147,7 @@
         }
       ],
       "source": [
-        "env = gym.make(SIMP_ENV_NAME, new_step_api=True, render_mode=RENDER_MODE)\n",
+        "env = gym.make('Taxi-v3', new_step_api=True, render_mode='rgb_array')\n",
         "env.reset(seed=42)\n",
         "init_frame = env.render()[0]\n",
         "\n",
@@ -228,7 +203,6 @@
       "outputs": [],
       "source": [
         "frames = [init_frame]  # List to hold the frames\n",
-        "history = []\n",
         "\n",
         "done = False\n",
         "truncated = False\n",
@@ -237,7 +211,6 @@
         "    state, reward, done, truncated, info = env.step(action)\n",
         "    frame = env.render()\n",
         "    frames.append(frame[0])  # Save the frame\n",
-        "    history.append((state, reward, done, truncated, info))\n",
         "\n",
         "env.close()  # Don't forget to close the environment"
       ]
@@ -300,7 +273,9 @@
       "source": [
         "### Optimize with Q-Learning\n",
         "\n",
-        "Q-learning is a type of Reinforcement Learning (RL) algorithm. In RL, you have an agent (in our case, the taxi) that learns how to make decisions (like where to move) by interacting with an environment (the grid world). The goal is for the agent to learn the best actions to take in different situations to achieve its objective, which is usually defined by a reward system and can be quantified by what we call Q-Value."
+        "Q-learning is a type of Reinforcement Learning (RL) algorithm. In RL, you have an agent (in our case, the taxi) that learns how to make decisions (like where to move) by interacting with an environment (the grid world). The goal is for the agent to learn the best actions to take in different situations to achieve its objective, which is usually defined by a reward system and can be quantified by what we call Q-value, which gets updated by adding a portion of the expected reward of performing an action.\n",
+        "\n",
+        "![Q-value update](https://wikimedia.org/api/rest_v1/media/math/render/svg/d247db9eaad4bd343e7882ec546bf3847ebd36d8)"
       ]
     },
     {
@@ -391,6 +366,8 @@
         }
       ],
       "source": [
+        "# This algorithm is a modification of the https://www.learndatasci.com/tutorials/reinforcement-q-learning-scratch-python-openai-gym/\n",
+        "\n",
         "%%time\n",
         "\"\"\"Training the agent\"\"\"\n",
         "\n",
@@ -461,7 +438,7 @@
         "id": "jyKO-OEfHuPK"
       },
       "source": [
-        "In the first couple of episodes, our agent took around 350 steps to complete the objectve. The number quickly dropped down to around 20-ish. The penalties and steps taken flunctuates but never diminishes as we set 10% of the steps to be random (ϵ = 10).\n",
+        "In the first couple of episodes, our agent took around 350 steps to complete the objective. The number quickly dropped down to around 20-ish. The penalties and steps taken flunctuate but never diminishes as we set 10% of the steps to be random (ϵ = 10).\n",
         "\n",
         "Let's see how the agent performs in the exploit stage."
       ]
@@ -754,7 +731,7 @@
         "id": "MXbdJ6vQYfuz"
       },
       "source": [
-        "To help GPT understand the problem. We will need to introduce some basic descriptions of the problem that we're dealing with."
+        "To help GPT understand the problem. We will need to write a textual description of the problem that we're dealing with."
       ]
     },
     {
@@ -872,7 +849,7 @@
         "id": "X4suyzlKcRxH"
       },
       "source": [
-        "Our GPT-3.5 model seem to have no idea about the spacial relationship between different objects in the GridWorld. It also seem to be confused about which direction the taxi would be moved to."
+        "Our GPT-3.5 model seem to have no idea about the spatial relationship between different objects in the GridWorld. It also seem to be confused about which direction the taxi would be moved to."
       ]
     },
     {
@@ -901,7 +878,7 @@
         "    figure, ax = plt.subplots(figsize=(4, 2.5))\n",
         "    ax.axis('off')  # Hide the axis\n",
         "\n",
-        "    env = gym.make(SIMP_ENV_NAME, new_step_api=True, render_mode='rgb_array')\n",
+        "    env = gym.make('Taxi-v3', new_step_api=True, render_mode='rgb_array')\n",
         "    env.reset(seed=42)\n",
         "    init_frame = env.render()[0]\n",
         "    frames = [init_frame]  # List to hold the frames\n",
@@ -1046,9 +1023,9 @@
         "    <figcaption style=\"display: block; text-align: center;\">GPT-4 with vague prompt</figcaption>\n",
         "</figure>\n",
         "\n",
-        "I ran the prompt for a couple of times during the development stage. In most of the cases, the GPT-4 model is able to provide a somewhat reasonable plan before giving the final answer, but it is still not able to capture the location information from our textual description.\n",
+        "I ran the prompt for a couple of times during the development stage. In most cases, the GPT-4 model is able to provide a somewhat reasonable plan before giving the final answer, but it is still not able to capture the location information from our textual description.\n",
         "\n",
-        "Very interestingly, the GPT-4 model occationaly tries to encode the location of the taxi to form (row, col) from the raw text in the prompt before trying to make plan. It ususally achieves a much better result in those cases.\n",
+        "Very interestingly, the GPT-4 model occasionally tries to encode the location of the taxi to form (row, col) from the raw text in the prompt before trying to make plan. It usually achieves a much better result in those cases.\n",
         "\n",
         "We probably should incorporate the location encoding as part of our prompt for consistent performance."
       ]
@@ -1061,7 +1038,7 @@
       "source": [
         "### Location Encoding\n",
         "\n",
-        "An easy way to encode location information is to simply expressing it as tuple of (row, col) given the simple structure of our gridworld. For simplicity, we will treat each cell as a column and let GPT try to figure out the position of the walls."
+        "An easy way to encode location information is to simply express it as tuple of (row, col) given the simple structure of our gridworld. For simplicity, we will treat each cell as a column and let GPT try to figure out the position of the walls."
       ]
     },
     {
@@ -1254,7 +1231,7 @@
         "\n",
         "![Chain of Thought](https://www.promptingguide.ai/_next/image?url=%2F_next%2Fstatic%2Fmedia%2Fcot.1933d9fe.png&w=1920&q=75)\n",
         "\n",
-        "In our case, we will use what we call Zero-Shot CoT, which is done simply by adding this magical sentense `Let's think step by step.` where it fits."
+        "In our case, we will use what we call Zero-Shot CoT, which is done simply by adding this magical sentence `Let's think step by step.` where it fits."
       ],
       "metadata": {
         "id": "byJdSlueW1As"
@@ -1420,11 +1397,11 @@
         "</table>\n",
         "\n",
         "\n",
-        "Seems that with the CoT prompting method, the main issues with GPT-3 and GPT-4 persist to be hallucination and neglecting the wall position, respectively.\n",
+        "With the Zero-shot CoT prompting method, our model starts to wander a lot in an inefficient way. This could be either due to hallucination or misinterpretation of the task.\n",
         "\n",
-        "Hallucination is tricky to solve and might have to do with the model's foundamental performance. But we might be able to help our GPT-4 model by modifying our encoding method to include the wall positions. Before we modify it, let's check how the models perform with ToT.\n",
+        "Hallucination is tricky to solve and might have to do with the model's fundamental performance. Let's check how the models perform with ToT.\n",
         "\n",
-        "Tree of Thoughts (ToT) is a framework that generalizes over chain-of-thought prompting and encourages exploration over thoughts that serve as intermediate steps for general problem solving with language models.\n",
+        "Tree of Thoughts (ToT) is a framework that generalizes over chain-of-thought prompting and encourages exploration of thoughts that serve as intermediate steps for general problem-solving with language models.\n",
         "\n",
         "![Tree of Thoughts](https://www.promptingguide.ai/_next/image?url=%2F_next%2Fstatic%2Fmedia%2FTOT.3b13bc5e.png&w=3840&q=75)"
       ],
@@ -1744,7 +1721,7 @@
         "    <figcaption style=\"display: block; text-align: center;\">GPT-4 with a location encoded prompt (wall inclusive)</figcaption>\n",
         "</figure>\n",
         "\n",
-        "Our model is still having trouble understanding the spacial relationship of the walls and the taxi when making decisions. It seems quite challenging for the chat model to complete the task as it is only making a plan from the starting position and cannot account for any issue it run into during the execution.\n",
+        "Our model is still having trouble understanding the spatial relationship of the walls and the taxi when making decisions. It seems quite challenging for the chat model to complete the task as it is only making a plan from the starting position and cannot account for any issue it run into during the execution.\n",
         "\n",
         "Let's bless it with LangChain and turn it into an agent that can use Tools and make observations of the environment."
       ],
@@ -2812,9 +2789,9 @@
         "    <figcaption style=\"display: block; text-align: center;\">GPT-4 ReAct Agent</figcaption>\n",
         "</figure>\n",
         "\n",
-        "The ReAct Agent showed a lot more insight how LLM thinks when observing the environment. Our GPT-4-turbo model seemed shortsighted and had trouble understand how to plan routes, it only looks around 1-2 cells to check for walls but dismisses walls it is 'obviously' going to run into based on its plan. I.e LLM decides to go south then west, then only checks if there is anything blocking the taxi from going south at the position it is making the decision.\n",
+        "The ReAct Agent showed a lot more insight into how LLM thinks when observing the environment. Our GPT-4-turbo model seemed shortsighted and had trouble understanding how to plan routes, it only looks around 1–2 cells to check for walls but dismisses walls it is 'obviously' going to run into based on its plan. I.e LLM decides to go south then west, then only checks if there is anything blocking the taxi from going south at the position it is making the decision.\n",
         "\n",
-        "Despite shortsighted on planning the walls, the ReAct Agent is able to reflect on being stuck and look for other ways to complete the task. It is our first successful LLM-as-policy approach that achieved the objective."
+        "Despite being shortsighted in planning the walls, the ReAct Agent is able to reflect on being stuck and look for other ways to complete the task. It is our first successful LLM-as-policy approach that achieved the objective."
       ],
       "metadata": {
         "id": "UWA-filt3UN4"
@@ -2897,7 +2874,7 @@
         "\n",
         "**Location Encoding**:\n",
         "\n",
-        "The steps taken and rewards can indicate the performance to some degree. But it is affected by the randomness of the internal states of the LLM. As we have seen through the process, the LLMs struggled to understand the spacial relationships and retreiving location information for most of the time. GPT 4 was occationally able to spontaneously perform location encoding without given instruction and improve its performance.\n",
+        "The steps taken and rewards can indicate the performance to some degree. But it is affected by the randomness of the internal states of the LLM. As we have seen through the process, the LLMs struggled to understand the spatial relationships and retreiving location information for most of the time. GPT 4 was occasionally able to spontaneously perform location encoding without given instruction and improve its performance.\n",
         "\n",
         "The LLM also had major issue understanding the position of the walls without encoding their locations. I've also tried other method such as encoding the wall as (row, (cell_1, cell_2)) but it only made the performance worse as LLM became confused about the location encodings in general.\n",
         "\n",
@@ -2925,11 +2902,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Despite demonstrating progress in task comprehension and much stronger ability of problem solving comparing to their precedents, LLMs are still far from taking on complex tasks in the real world. Even the current SOTA like GPT-4-Turbo  has trouble keeping rules in a simple environment like not to jump over a wall depite specified in the prompt.\n",
+        "Despite demonstrating progress in task comprehension and a much stronger ability for problem-solving compared to their precedents, LLMs are still far from taking on complex tasks in the real world. Even the current SOTA like GPT-4-Turbo has trouble keeping rules in a simple environment like not jumping over a wall despite being specified in the prompt.\n",
         "\n",
-        "It is evident that the performance of the LLM heavily rely on the presence of a well-engineered encoding algorithm to help LLM preceive the environment and retreive the crucial informations. But the cost of developing such an algorithm could scale drastically with the complexity of the task. We can imagine that the states of a sufficiently intricate environment might not be able to be converted into a textual representation that is accurate, consistent, and complete.\n",
+        "It is evident that the performance of the LLM heavily relies on the presence of a well-engineered encoding algorithm to help the LLM perceive the environment and retrieve crucial information. However, the cost of developing such an algorithm could scale drastically with the complexity of the task. We can imagine that the states of a sufficiently intricate environment might not be able to be converted into a textual representation that is accurate, consistent, and complete.\n",
         "\n",
-        "That being said, the current LLMs are designed to imitate how human write texts instead of focus on problem solving and math. It is intriguing how much progress we are going to see in the next couple of years with LLMs finetuned on  and logical reasoning."
+        "That being said, the current LLMs are designed to imitate how humans write texts instead of focusing on problem-solving and math. It is intriguing how much progress we are going to see in the next couple of years with LLMs finetuned on logical reasoning."
       ],
       "metadata": {
         "id": "ANK2fOOYDIMX"
@@ -2967,6 +2944,8 @@
         "Greg Brockman and Vicki Cheung and Ludwig Pettersson and Jonas Schneider and John Schulman and Jie Tang and Wojciech Zaremba (2016) OpenAI Gym. ArXiv, abs/1606.01540\n",
         "\n",
         "Van Heeswijk, W., PhD. (2022, January 6). Walking off the cliff with Off-Policy Reinforcement learning. Medium. https://medium.com/towards-data-science/walking-off-the-cliff-with-off-policy-reinforcement-learning-7fdbcdfe31ff\n",
+        "\n",
+        "Wikipedia contributors. (2023, November 29). Q-learning. Wikipedia. https://en.wikipedia.org/wiki/Q-learning\n",
         "\n",
         "openai-cookbook/examples/How_to_call_functions_with_chat_models.ipynb at main · openai/openai-cookbook. (n.d.). GitHub. https://github.com/openai/openai-cookbook/blob/main/examples/How_to_call_functions_with_chat_models.ipynb\n",
         "\n",
